# internal/api/access/service.go
@@ -3,11 +3,13 @@ package access
 import (
 	"context"
 	"errors"
-	"fmt"
-	"strings"
 
+	"github.com/mistandok/auth/internal/convert"
+	"github.com/mistandok/auth/internal/service"
 	"github.com/mistandok/auth/pkg/access_v1"
-	"google.golang.org/grpc/metadata"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
+	"google.golang.org/protobuf/types/known/emptypb"
 )
 
 const msgInternalError = "что-то пошло не так, мы уже работаем над решением проблемы"
@@ -17,30 +19,35 @@ var errInternal = errors.New(msgInternalError)
 // Implementation user Server.
 type Implementation struct {
 	access_v1.UnimplementedAccessV1Server
+	accessService service.AccessService
 }
 
 // NewImplementation ..
-func NewImplementation() *Implementation {
-	return &Implementation{}
+func NewImplementation(accessService service.AccessService) *Implementation {
+	return &Implementation{accessService: accessService}
 }
 
 // Create ..
 func (i *Implementation) Create(ctx context.Context, request *access_v1.CreateRequest) (*access_v1.CreateResponse, error) {
-	md, ok := metadata.FromIncomingContext(ctx)
-	if !ok {
-		return nil, errors.New("metadata is not provided")
+	id, err := i.accessService.Create(ctx, convert.ToServiceEndpointAccessFromCreateRequest(request))
+	if err != nil {
+		switch {
+		case errors.Is(err, service.ErrNeedAdminRole):
+			return nil, status.Error(codes.PermissionDenied, err.Error())
+		default:
+			return nil, errInternal
+		}
 	}
 
-	authHeader, ok := md["authorization"]
-	if !ok || len(authHeader) == 0 {
-		return nil, errors.New("authorization header is not provided")
+	return &access_v1.CreateResponse{Id: id}, nil
+}
+
+// Check ..
+func (i *Implementation) Check(ctx context.Context, request *access_v1.CheckRequest) (*emptypb.Empty, error) {
+	err := i.accessService.Check(ctx, request.Address)
+	if err != nil {
+		return &emptypb.Empty{}, status.Error(codes.PermissionDenied, err.Error())
 	}
 
-	if !strings.HasPrefix(authHeader[0], "Bearer ") {
-		return nil, errors.New("invalid authorization header format")
-	}
-
-	accessToken := strings.TrimPrefix(authHeader[0], "Bearer ")
-
-	return &access_v1.CreateResponse{Id: 1}, errors.New(fmt.Sprintf("%s", accessToken))
+	return &emptypb.Empty{}, nil
 }
